// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the expected classes 1`] = `
.c3 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 100px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 1.0714285714285714em;
  height: 40px;
  line-height: 38px;
  font-size: 14px;
  background-color: transparent;
  color: #1f73b7;
  border: none;
  padding: 0;
  width: 40px;
  color: #68737d;
}

.c1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: none;
}

.c1[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1[aria-pressed='true'],
.c1[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background-color: rgba(31,115,183,0.08);
  color: #144a75;
}

.c1[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c1:active,
.c1[aria-pressed='true'],
.c1[aria-pressed='mixed'] {
  background-color: rgba(31,115,183,0.2);
  color: #0f3554;
}

.c1:disabled {
  border-color: transparent;
  background-color: #cee2f2;
  color: #5293c7;
}

.c1:disabled {
  cursor: default;
}

.c1 .c2 {
  width: 16px;
  min-width: 16px;
  height: 16px;
}

.c4 .c1 {
  position: relative;
  margin-left: -1px;
}

.c4 .c1:hover,
.c4 .c1:active {
  z-index: 1;
}

.c4 .c1:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c4 .c1:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 .c1:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c4 .c1:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c4 .c1:first-of-type:not(:last-of-type) .c2 {
  margin-right: -2px;
}

.c4 .c1:last-of-type:not(:first-of-type) .c2 {
  margin-left: -2px;
}

.c1:hover {
  color: #49545c;
}

.c1:active,
.c1[aria-pressed='true'],
.c1[aria-pressed='mixed'] {
  color: #2f3941;
}

.c1 .c2 {
  width: 16px;
  height: 16px;
}

.c0.c0.c0 {
  width: 2rem;
  height: 2rem !important;
  background-color: #ffffff;
  color: #2f3941;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0.c0.c0:hover {
  background-color: rgba(25,80,85,0.08);
  color: #2f3941;
}

.c0.c0.c0:active,
.c0.c0.c0[aria-pressed='true'],
.c0.c0.c0[aria-pressed='mixed'] {
  background-color: rgba(25,80,85,0.2);
}

.c0.c0.c0[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(25,80,85,0.2);
}

.c0.c0.c0 svg {
  width: 1rem;
  height: 1rem;
}

<div>
  <div>
    <div
      class="content "
      data-testid="hc-article"
    >
      <h2
        class="title"
        data-testid="hc-article-title"
      />
      <div
        class="originalArticleButton"
      >
        <button
          aria-label="View original article"
          class="c0 c1"
          data-garden-id="buttons.icon_button"
          data-garden-version="8.13.0"
          title="View original article"
          type="button"
        >
          <svg
            class="c2 c3"
            data-garden-id="buttons.icon"
            data-garden-version="8.13.0"
            realfilename="link-external.svg"
            theme="[object Object]"
          />
        </button>
      </div>
      <div
        class="article"
        data-testid="hc-article-body"
        role="presentation"
      >
        
    
        <h1
          id="foo"
        >
          Foobar
        </h1>
        
    
        <h2>
          Baz
        </h2>
        
    
        <a
          href="#foo"
        >
          inpage link
        </a>
        
    
        <a
          href="#1"
        >
          inpage link 2
        </a>
        
    
        <a
          href="https://testingHost/relative/link"
          id="relative"
          name="bar"
        >
          relative link
        </a>
        
    
        <a
          href="//youtube/embed/xyz"
          id="protocol-relative"
          name="pbar"
        >
          protcol relative link
        </a>
        
    
        <div
          id="preserved"
        >
          
      This text contains a sub-note
          <sub>
            1
          </sub>
          
    
        </div>
        
    
        <div
          id="notes"
        >
          <sup>
            1
          </sup>
          This explains the note
        </div>
        
    
        <div
          class="table-wrap"
        >
          <table>
            
      
            <tbody>
              <tr>
                
        
                <td>
                  <p>
                    Zombocom
                  </p>
                  
      
                </td>
              </tr>
              
    
            </tbody>
          </table>
        </div>
        
    
        <p>
          Whoa!
        </p>
        
    
        <div
          class="table-wrap"
        >
          <table>
            
      
            <tbody>
              <tr>
                
        
                <td>
                  OMGWTFBBQ!!1! wat? another table? but why??
                </td>
                
      
              </tr>
              
    
            </tbody>
          </table>
        </div>
        
  
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the expected mobile classes 1`] = `
.c3 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 100px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 1.0714285714285714em;
  height: 40px;
  line-height: 38px;
  font-size: 14px;
  background-color: transparent;
  color: #1f73b7;
  border: none;
  padding: 0;
  width: 40px;
  color: #68737d;
}

.c1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: none;
}

.c1[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1[aria-pressed='true'],
.c1[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background-color: rgba(31,115,183,0.08);
  color: #144a75;
}

.c1[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c1:active,
.c1[aria-pressed='true'],
.c1[aria-pressed='mixed'] {
  background-color: rgba(31,115,183,0.2);
  color: #0f3554;
}

.c1:disabled {
  border-color: transparent;
  background-color: #cee2f2;
  color: #5293c7;
}

.c1:disabled {
  cursor: default;
}

.c1 .c2 {
  width: 16px;
  min-width: 16px;
  height: 16px;
}

.c4 .c1 {
  position: relative;
  margin-left: -1px;
}

.c4 .c1:hover,
.c4 .c1:active {
  z-index: 1;
}

.c4 .c1:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c4 .c1:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 .c1:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c4 .c1:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c4 .c1:first-of-type:not(:last-of-type) .c2 {
  margin-right: -2px;
}

.c4 .c1:last-of-type:not(:first-of-type) .c2 {
  margin-left: -2px;
}

.c1:hover {
  color: #49545c;
}

.c1:active,
.c1[aria-pressed='true'],
.c1[aria-pressed='mixed'] {
  color: #2f3941;
}

.c1 .c2 {
  width: 16px;
  height: 16px;
}

.c0.c0.c0 {
  width: 2rem;
  height: 2rem !important;
  background-color: #ffffff;
  color: #2f3941;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0.c0.c0:hover {
  background-color: rgba(25,80,85,0.08);
  color: #2f3941;
}

.c0.c0.c0:active,
.c0.c0.c0[aria-pressed='true'],
.c0.c0.c0[aria-pressed='mixed'] {
  background-color: rgba(25,80,85,0.2);
}

.c0.c0.c0[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(25,80,85,0.2);
}

.c0.c0.c0 svg {
  width: 1rem;
  height: 1rem;
}

<div>
  <div>
    <div
      class="content contentMobile"
      data-testid="hc-article"
    >
      <h2
        class="title"
        data-testid="hc-article-title"
      />
      <div
        class="originalArticleButton"
      >
        <button
          aria-label="View original article"
          class="c0 c1"
          data-garden-id="buttons.icon_button"
          data-garden-version="8.13.0"
          title="View original article"
          type="button"
        >
          <svg
            class="c2 c3"
            data-garden-id="buttons.icon"
            data-garden-version="8.13.0"
            realfilename="link-external.svg"
            theme="[object Object]"
          />
        </button>
      </div>
      <div
        class="article"
        data-testid="hc-article-body"
        role="presentation"
      >
        
    
        <h1
          id="foo"
        >
          Foobar
        </h1>
        
    
        <h2>
          Baz
        </h2>
        
    
        <a
          href="#foo"
        >
          inpage link
        </a>
        
    
        <a
          href="#1"
        >
          inpage link 2
        </a>
        
    
        <a
          href="https://testingHost/relative/link"
          id="relative"
          name="bar"
        >
          relative link
        </a>
        
    
        <a
          href="//youtube/embed/xyz"
          id="protocol-relative"
          name="pbar"
        >
          protcol relative link
        </a>
        
    
        <div
          id="preserved"
        >
          
      This text contains a sub-note
          <sub>
            1
          </sub>
          
    
        </div>
        
    
        <div
          id="notes"
        >
          <sup>
            1
          </sup>
          This explains the note
        </div>
        
    
        <div
          class="table-wrap"
        >
          <table>
            
      
            <tbody>
              <tr>
                
        
                <td>
                  <p>
                    Zombocom
                  </p>
                  
      
                </td>
              </tr>
              
    
            </tbody>
          </table>
        </div>
        
    
        <p>
          Whoa!
        </p>
        
    
        <div
          class="table-wrap"
        >
          <table>
            
      
            <tbody>
              <tr>
                
        
                <td>
                  OMGWTFBBQ!!1! wat? another table? but why??
                </td>
                
      
              </tr>
              
    
            </tbody>
          </table>
        </div>
        
  
      </div>
    </div>
  </div>
</div>
`;
